Se creó con Colab

--- a/Copia_de_TP_automático.ipynb
+++ b/Copia_de_TP_automático.ipynb
@@ -5399,9 +5399,156 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from IPython.display import display, HTML\n",
+        "\n",
+        "# Datos de los mejores modelos\n",
+        "modelos = [\n",
+        "    {\n",
+        "        \"Modelo\": \"Árbol de Decisión\",\n",
+        "        \"Configuración elegida\": \"prufundidad del arbol 4, min_samples_split=250, entropy, clases balanceadas\",\n",
+        "        \"AUROC Validación (media)\": 0.7045,\n",
+        "        \"AUROC Entrenamiento (media)\": 0.7048,\n",
+        "    },\n",
+        "    {\n",
+        "        \"Modelo\": \"KNN\",\n",
+        "        \"Configuración elegida\": \"6 vecinos3,  pesos uniformes, manhattan\",\n",
+        "        \"AUROC Validación (media)\": 0.8339,\n",
+        "        \"AUROC Entrenamiento (media)\": 0.8522,\n",
+        "\n",
+        "    },\n",
+        "    {\n",
+        "        \"Modelo\": \"SVM (RBF)\",\n",
+        "        \"Configuración elegida\": \"nucleo gauseano, C=256, pesos balanceados\",\n",
+        "        \"AUROC Validación (media)\": 0.7809,\n",
+        "        \"AUROC Entrenamiento (media)\": 1.0000,\n",
+        "\n",
+        "    },\n",
+        "    {\n",
+        "        \"Modelo\": \"LDA\",\n",
+        "        \"Configuración elegida\": \"(default)\",\n",
+        "        \"AUROC Validación (media)\": 0.7156,\n",
+        "        \"AUROC Entrenamiento (media)\": 0.9941,\n",
+        "\n",
+        "    },\n",
+        "    {\n",
+        "        \"Modelo\": \"Naïve Bayes\",\n",
+        "        \"Configuración elegida\": \"(default)\",\n",
+        "        \"AUROC Validación (media)\": 0.8174,\n",
+        "        \"AUROC Entrenamiento (media)\": 0.9709,\n",
+        "\n",
+        "    }\n",
+        "]\n",
+        "\n",
+        "# Convertimos a DataFrame\n",
+        "df_modelos = pd.DataFrame(modelos)\n",
+        "\n",
+        "# Mostramos tabla bonita\n",
+        "display(HTML(df_modelos.to_html(index=False, justify=\"center\")))\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 241
+        },
+        "id": "6txM7HGgwUY7",
+        "outputId": "2bf8ba98-662c-4c70-936f-1bc4abd3e185"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: center;\">\n",
+              "      <th>Modelo</th>\n",
+              "      <th>Configuración elegida</th>\n",
+              "      <th>AUROC Validación (media)</th>\n",
+              "      <th>AUROC Entrenamiento (media)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>Árbol de Decisión</td>\n",
+              "      <td>prufundidad del arbol 4, min_samples_split=250, entropy, clases balanceadas</td>\n",
+              "      <td>0.7045</td>\n",
+              "      <td>0.7048</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>KNN</td>\n",
+              "      <td>6 vecinos3,  pesos uniformes, manhattan</td>\n",
+              "      <td>0.8339</td>\n",
+              "      <td>0.8522</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>SVM (RBF)</td>\n",
+              "      <td>nucleo gauseano, C=256, pesos balanceados</td>\n",
+              "      <td>0.7809</td>\n",
+              "      <td>1.0000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>LDA</td>\n",
+              "      <td>(default)</td>\n",
+              "      <td>0.7156</td>\n",
+              "      <td>0.9941</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>Naïve Bayes</td>\n",
+              "      <td>(default)</td>\n",
+              "      <td>0.8174</td>\n",
+              "      <td>0.9709</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "    # esto es de chat gpt hay que cambiarlo !!!!!\n",
+        "    \n",
+        "    \n",
+        "    Arbol : Regulariza bien, evita overfitting con min_samples_split grande. No supera a otros más flexibles.\n",
+        "\n",
+        "    KNN : Mejor equilibrio entre AUROC alto y bajo gap (0.0183). Captura bien la estructura local de los datos.\n",
+        "\n",
+        "    SVM: Buen AUROC, pero claro sobreajuste (train=1.0). Requiere tuning de gamma o reducción de features.\n",
+        "\n",
+        "    LDA  Alto sobreajuste: en train roza 1.0, pero baja en validación. Podría mejorar con shrinkage.\n",
+        "    \n",
+        "    NB : Sorprendentemente sólido pese a suposiciones fuertes. Menos gap\n",
+        "    que SVM, pero peor que KNN.\n"
+      ],
+      "metadata": {
+        "id": "1061-cfSysg0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para nosotras el mejor modelo es el de KNN con los hipermarametros de la tabla. No solo tiene el mejor AUROC de validacion, sino que ademas es el que tiene menor gap entre val y train. Esto hace parecer que el modelo no esta sobreajustando a los datos de entrenamiento, por lo que decidimos quedarnos con este modelo como el mejor .\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "GwqKn5RBzJR8"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "6txM7HGgwUY7"
+        "id": "obPQODUJyEx4"
       },
       "execution_count": null,
       "outputs": []
